--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "redux-task-planner",
+  "name": "task-planner",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AntonyZP.github.io/redux-task-planner/",
+  "homepage": "https://AntonyZP.github.io/task-planner/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@redux-devtools/extension": "^3.2.5",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
